inclusão de textos e imagens

--- a/fotos.html
+++ b/fotos.html
@@ -159,14 +159,14 @@
                     <img src="imagens/gallery/18.jpg" alt="acomodação recanto dos nobres">
                     </a>
 
-                    </a> <a href="imagens/gallery/19.jpg" data-lightbox="models"
+                    </a> <a href="imagens/gallery/19.jpeg" data-lightbox="models"
                     data-title="Instalações">
-                    <img src="imagens/gallery/19.jpg" alt="acomodação recanto dos nobres">
+                    <img src="imagens/gallery/19.jpeg" alt="acomodação recanto dos nobres">
                     </a>
 
-                    </a> <a href="imagens/gallery/20.jpg" data-lightbox="models"
+                    </a> <a href="imagens/gallery/20.jpeg" data-lightbox="models"
                     data-title="Instalações">
-                    <img src="imagens/gallery/20.jpg" alt="acomodação recanto dos nobres">
+                    <img src="imagens/gallery/20.jpeg" alt="acomodação recanto dos nobres">
                     </a>
                 </div>
             </div>
@@ -217,7 +217,7 @@
     
                 </footer>
     
-
         <script src="js/lightbox-plus-jquery.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
