--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
     <body>
         <!--  HEADER SECTION -->
         <header>
-            <div class="top-bar"></div>
+            <div class="top-bar">
+                <span>(11) 2681-7168 | (11) 99570-0067 -- Segunda a Sábado das 8:00
+                    - 18.00 -- Rua Coremu 175, Vila Esperança - São Paulo</span>
+            </div>
             <nav class="nav-bar">
                 <div class="logotipo">
                     <a href="index.html"> <img src="/imagens/logotipo.png"
@@ -98,27 +101,33 @@
 
         <!--  BANNER SECTION -->
         <section class="banner" id="banner">
-            <img src="./imagens/img-banner.png" alt="Casal idoso feliz interage" class="banner__image">
-            <img src="./imagens/img-banner-mobile.png" alt="Casal idoso feliz interage"
+            <img src="./imagens/img-banner.png" alt="Casal idoso feliz interage"
+                class="banner__image">
+            <img src="./imagens/img-banner-mobile.png"
+                alt="Casal idoso feliz interage"
                 class="banner__image__mobile">
             <div class="banner__content">
                 <h1 class="title">Renove sua Qualidade de Vida</h1>
                 <h2 class="subtitle">Sua Casa para uma Vida Melhor</h2>
                 <br>
-                <p class="paragraph"> O Recanto dos Nobres é o ambiente familiar
+                <p class="banner__paragraph paragraph"> O Recanto dos Nobres é o
+                    ambiente familiar
                     perfeito para você. Estamos assegurando um espaço alegre e
                     agradável para todos os nossos visitantes.</p>
                 <br>
-                <button class="banner-button standard-button">
-                    📞 WhatsApp</button>
-                <!-- TODO: incluir telefone redirect whatsapp -->
+                <button class="banner-button standard-button"><a
+                        href="https://wa.me/5511995700067?text=Gostaria%20de%20mais%20informações">📞
+                        WhatsApp</a>
+                </button>
             </div>
         </section>
 
         <!--  ABOUT US SECTION -->
         <section class="about" id="about">
-            <img src="./imagens/ornament.svg" alt="imagem de fundo" class="about__bg_left">
-            <img src="./imagens/ornament.svg" alt="imagem de fundo" class="about__bg_right">
+            <img src="./imagens/ornament.svg" alt="imagem de fundo"
+                class="about__bg_left">
+            <img src="./imagens/ornament.svg" alt="imagem de fundo"
+                class="about__bg_right">
             <div class="about__container">
                 <div class="about__content">
                     <h2 class="about__title title">Sobre nós</h2>
@@ -153,7 +162,8 @@
                         Tatuapé.</p>
                 </div>
                 <div class="about__image">
-                    <img src="./imagens/img-about.png" alt="Enfermeira e idosa abraçadas">
+                    <img src="./imagens/img-about.png"
+                        alt="Enfermeira e idosa abraçadas">
                 </div>
 
             </div>
@@ -184,55 +194,35 @@
                 <div class="testimonial__card">
                     <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
-                        <span>The experts easily identified the
-                            wand guided us through the
-                            creation of the c.</span>
+                        <span>Uma casa bem arejada, ótimos funcionários sempre
+                            muito carinhosos com nossos idosos</span>
                         <div class="line"></div>
-                        <span>Vincent Smith</span>
+                        <span>Carolina Fernandes</span>
                     </div>
                 </div>
 
                 <div class="testimonial__card">
                     <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
-                        <span>The experts easily identified the
-                            wand guided us through the
-                            creation of the c.</span>
+                        <span>Casa de repouso muito boa, bem limpa,
+                            funcionários muito atenciosos, quartos sempre
+                            arrumados, meu vô gosta muito desta casa</span>
                         <div class="line"></div>
-                        <span>Vincent Smith</span>
+                        <span>Pedro Souza</span>
                     </div>
                 </div>
 
                 <div class="testimonial__card">
                     <img src="./imagens/aspas.svg" alt="aspas">
                     <div class="testimonial__card__content">
-                        <span>The experts easily identified the
-                            wand guided us through the
-                            creation of the c.</span>
+                        <span>Faltam palavras para agradecer pelo trabalho de
+                            vocês.
+                            Agradeço todos da equipe que são tão amorosas e
+                            cuidadosas com todos. Um grande beijo no coração de
+                            vocês.
+                        </span>
                         <div class="line"></div>
-                        <span>Vincent Smith</span>
-                    </div>
-                </div>
-
-                <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt="aspas">
-                    <div class="testimonial__card__content">
-                        <span>The experts easily identified the
-                            wand guided us through the
-                            creation of the c.</span>
-                        <div class="line"></div>
-                        <span>Vincent Smith</span>
-                    </div>
-                </div>
-
-                <div class="testimonial__card">
-                    <img src="./imagens/aspas.svg" alt="aspas">
-                    <div class="testimonial__card__content">
-                        <span>The experts easily identified the
-                            wand guided us through the
-                            creation of the c.</span>
-                        <div class="line"></div>
-                        <span>Vincent Smith</span>
+                        <span>Gabriel Silva</span>
                     </div>
                 </div>
             </div>
@@ -241,7 +231,7 @@
         <!--  CTA SECTION -->
         <section class="cta" id="cta">
             <p class="cta__paragraph paragraph">Nosso suporte está
-                disponível de Segunda a Sábado das 8:00 - 18.00.
+                disponível de Segunda a Sábado das 8:00 - 18.00
             </p>
 
             <br>
