--- a/servicos.html
+++ b/servicos.html
@@ -25,7 +25,7 @@
             <nav class="nav-bar">
                 <div class="logotipo">
                     <a href="index.html"><img src="/imagens/logotipo.png"
-                        alt="Logotipo recanto dos nobres"></a>
+                            alt="Logotipo recanto dos nobres"></a>
                 </div>
                 <div class="nav-list">
                     <ul>
@@ -80,112 +80,82 @@
                         <div class="card">
                             <div class="card__content">
                                 <img class="card-img"
-                                    src="./imagens/cachorro.jpeg" alt>
-                                <h3>Mobile App Design</h3>
-                                <span>Viverra ut potenti aliquam feugiat dui
-                                    imperdiet laoreet tempus sed. Elit cursus
-                                    est
-                                    lorem in est id nec. Quis diam posuere at
-                                    nisl
-                                    eget turpis sagittis nunc. Aliquet et
-                                    ultrices
-                                    purus, id. Sagittis erat nunc in parturient.</span>
+                                    src="./imagens/enfermagem.jpg" alt>
+                                <h3>Enfermagem 24 horas</h3>
+                                <span>Nossos hóspedes
+                                    recebem cuidados de enfermagem dedicados e
+                                    contínuos 24 horas por dia. Nossa equipe de
+                                    enfermeiros altamente qualificados está
+                                    sempre disponível para garantir o bem-estar
+                                    e a saúde de nossos residentes,
+                                    proporcionando assistência médica,
+                                    administração de medicamentos e cuidados
+                                    personalizados sempre que necessário.</span>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card__content">
                                 <img class="card-img"
-                                    src="./imagens/cachorro.jpeg" alt>
-                                <h3>Mobile App Design</h3>
-                                <span>Viverra ut potenti aliquam feugiat dui
-                                    imperdiet laoreet tempus sed. Elit cursus
-                                    est
-                                    lorem in est id nec. Quis diam posuere at
-                                    nisl
-                                    eget turpis sagittis nunc. Aliquet et
-                                    ultrices
-                                    purus, id. Sagittis erat nunc in parturient.</span>
+                                    src="./imagens/medico.jpg" alt>
+                                <h3>Médico</h3>
+                                <span>Contamos com um corpo médico experiente
+                                    que faz visitas regulares à nossa casa de
+                                    repouso. Isso significa que nossos idosos
+                                    têm acesso a cuidados médicos de alta
+                                    qualidade, exames de saúde preventivos,
+                                    avaliações clínicas e aconselhamento médico
+                                    individualizado para garantir sua saúde e
+                                    conforto contínuos.</span>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card__content">
                                 <img class="card-img"
-                                    src="./imagens/cachorro.jpeg" alt>
-                                <h3>Mobile App Design</h3>
-                                <span>Viverra ut potenti aliquam feugiat dui
-                                    imperdiet laoreet tempus sed. Elit cursus
-                                    est
-                                    lorem in est id nec. Quis diam posuere at
-                                    nisl
-                                    eget turpis sagittis nunc. Aliquet et
-                                    ultrices
-                                    purus, id. Sagittis erat nunc in parturient.</span>
+                                    src="./imagens/nutricionista.jpg" alt>
+                                <h3>Nutricionista</h3>
+                                <span>A nutrição desempenha um papel fundamental
+                                    na qualidade de vida dos idosos. Nossos
+                                    nutricionistas especializados trabalham em
+                                    conjunto com nossos residentes para criar
+                                    planos alimentares personalizados que
+                                    atendam às suas necessidades dietéticas
+                                    específicas. Eles se certificam de que cada
+                                    refeição seja equilibrada e saborosa,
+                                    promovendo a saúde e o prazer de comer.</span>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card__content">
                                 <img class="card-img"
-                                    src="./imagens/cachorro.jpeg" alt>
-                                <h3>Mobile App Design</h3>
-                                <span>Viverra ut potenti aliquam feugiat dui
-                                    imperdiet laoreet tempus sed. Elit cursus
-                                    est
-                                    lorem in est id nec. Quis diam posuere at
-                                    nisl
-                                    eget turpis sagittis nunc. Aliquet et
-                                    ultrices
-                                    purus, id. Sagittis erat nunc in parturient.</span>
+                                    src="./imagens/Fisioterapia.jpg" alt>
+                                <h3>Fisioterapia</h3>
+                                <span>A fisioterapia é essencial para manter a
+                                    mobilidade e a qualidade de vida dos idosos.
+                                    Em Recanto dos Nobres, oferecemos sessões de
+                                    fisioterapia individualizadas e em grupo
+                                    para ajudar nossos residentes a manterem a
+                                    força muscular, a flexibilidade e a
+                                    independência. Nossos fisioterapeutas estão
+                                    comprometidos em melhorar a funcionalidade e
+                                    o conforto de nossos idosos.</span>
                             </div>
                         </div>
 
                         <div class="card">
                             <div class="card__content">
                                 <img class="card-img"
-                                    src="./imagens/cachorro.jpeg" alt>
-                                <h3>Mobile App Design</h3>
-                                <span>Viverra ut potenti aliquam feugiat dui
-                                    imperdiet laoreet tempus sed. Elit cursus
-                                    est
-                                    lorem in est id nec. Quis diam posuere at
-                                    nisl
-                                    eget turpis sagittis nunc. Aliquet et
-                                    ultrices
-                                    purus, id. Sagittis erat nunc in parturient.</span>
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card__content">
-                                <img class="card-img"
-                                    src="./imagens/cachorro.jpeg" alt>
-                                <h3>Mobile App Design</h3>
-                                <span>Viverra ut potenti aliquam feugiat dui
-                                    imperdiet laoreet tempus sed. Elit cursus
-                                    est
-                                    lorem in est id nec. Quis diam posuere at
-                                    nisl
-                                    eget turpis sagittis nunc. Aliquet et
-                                    ultrices
-                                    purus, id. Sagittis erat nunc in parturient.</span>
-                            </div>
-                        </div>
-
-                        <div class="card">
-                            <div class="card__content">
-                                <img class="card-img"
-                                    src="./imagens/cachorro.jpeg" alt>
-                                <h3>Mobile App Design</h3>
-                                <span>Viverra ut potenti aliquam feugiat dui
-                                    imperdiet laoreet tempus sed. Elit cursus
-                                    est
-                                    lorem in est id nec. Quis diam posuere at
-                                    nisl
-                                    eget turpis sagittis nunc. Aliquet et
-                                    ultrices
-                                    purus, id. Sagittis erat nunc in parturient.</span>
+                                    src="./imagens/refeicoes.jpg" alt>
+                                <h3>Refeições diárias</h3>
+                                <span>Em nossa Casa de Repouso para Idosos,
+                                    Recanto dos Nobres, cuidamos minuciosamente
+                                    da nutrição e do bem-estar de nossos
+                                    residentes. Oferecemos um serviço de
+                                    refeições diárias completo, composto por
+                                    seis refeições bem planejadas ao longo do
+                                    dia. </span>
                             </div>
                         </div>
                     </div>
@@ -236,7 +206,6 @@
             </div>
 
         </footer>
-
 
         <!-- GENERAL SCRIPT -->
         <script src="js/script.js"></script>
