--- a/sobre.html
+++ b/sobre.html
@@ -23,7 +23,8 @@
             <div class="top-bar"></div>
             <nav class="nav-bar">
                 <div class="logotipo">
-                    <a href="index.html"><img src="/imagens/logotipo.png" alt="Logotipo recanto dos nobres"></a>
+                    <a href="index.html"><img src="/imagens/logotipo.png"
+                            alt="Logotipo recanto dos nobres"></a>
                 </div>
                 <div class="nav-list">
                     <ul>
@@ -73,34 +74,46 @@
                 </div>
                 <div class="about__page__story__container">
                     <div class="about__page__story__text">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nulla non cursus purus. Aliquam nibh turpis, auctor
-                            vitae nisi eu, rutrum volutpat sem. Ut iaculis lectus
-                            commodo nisl lobortis, sed pulvinar odio auctor. Duis
-                            iaculis magna risus, vel lacinia erat dignissim at.
-                            Phasellus condimentum orci justo, in efficitur massa
-                            congue eget. Curabitur a accumsan massa. Sed vitae
-                            fermentum ipsum, eget scelerisque dui. Nunc finibus
-                            vitae tortor sit amet efficitur. Cras placerat, tellus
-                            in faucibus vestibulum, ex massa mattis neque, et
-                            euismod augue ipsum id risus. Donec finibus nec lacus eu
-                            interdum.</p>
-    
+                        <p>Somos mais do que uma simples residência para idosos;
+                            somos um verdadeiro lar. Nossa missão é tratar os
+                            idosos com compaixão, dedicando a eles respeito e
+                            atenção de primeira qualidade.</p>
                         <br>
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Nulla non cursus purus. Aliquam nibh turpis, auctor
-                            vitae nisi eu, rutrum volutpat sem. Ut iaculis lectus
-                            commodo nisl lobortis, sed pulvinar odio auctor. Duis
-                            iaculis magna risus, vel lacinia erat dignissim at.
-                            Phasellus condimentum orci justo, in efficitur massa
-                            congue eget. Curabitur a accumsan massa. Sed vitae
-                            fermentum ipsum, eget scelerisque dui. Nunc finibus
-                            vitae tortor sit amet efficitur. Cras placerat, tellus
-                            in faucibus vestibulum, ex massa mattis neque, et
-                            euismod augue ipsum id risus. Donec finibus nec lacus eu
-                            interdum.</p>
+
+                        <p>No nosso estabelecimento, deixamos completamente de
+                            lado o antigo conceito de asilo, superando estigmas
+                            que muitas vezes impedem as famílias de tomar a
+                            "melhor decisão" para seus entes queridos.</p>
+                        <br>
+
+                        <p>Nosso objetivo é proporcionar aos idosos momentos
+                            memoráveis e felizes nesta fase da vida. Contamos
+                            com uma equipe de profissionais altamente
+                            capacitados e motivados, prontos para cuidar com
+                            carinho e fornecer toda a infraestrutura necessária
+                            para garantir o máximo conforto a todo momento.</p>
+                        <br>
+
+                        <p>Na Casa de Repouso Recanto dos Nobres, estamos sempre
+                            em busca do mais alto padrão de atendimento, com uma
+                            estrutura preparada e adequada para nossos
+                            residentes. Atendemos indivíduos com diversos níveis
+                            de dependência, incluindo aqueles com Alzheimer,
+                            outras formas de demência, Parkinson, histórico de
+                            AVC e pós-cirurgias, bem como aqueles lúcidos e
+                            independentes que buscam tranquilidade, conforto e
+                            segurança.</p>
+                        <br>
+
+                        <p>Portanto, oferecemos cuidados especializados em saúde
+                            para atender a todas as necessidades dos residentes,
+                            contando com uma equipe completa e qualificada.</p>
+                        <br>
+
+
+                        <img class="about__page__img" src="imagens/festa-natal-recanto-dos-nobres.jpeg"
+                            alt="festa de natal recanto dos nobres">
+
                     </div>
                 </div>
             </div>
@@ -150,7 +163,6 @@
             </div>
 
         </footer>
-
 
         <!-- GENERAL SCRIPT -->
         <script src="js/script.js"></script>
