atualização de informações da empresa e inclusão de links

--- a/fotos.html
+++ b/fotos.html
@@ -42,7 +42,10 @@
                     </ul>
                 </div>
                 <div class="login-button">
-                    <button><a href="#">Contato</a></button>
+                    <button>
+                        <a
+                            href="https://wa.me/5511995700067?text=Gostaria%20de%20mais%20informações">Contato</a>
+                    </button>
                 </div>
 
                 <div class="mobile-menu-icon">
@@ -62,7 +65,10 @@
                 </ul>
 
                 <div class="login-button">
-                    <button><a href="#">Contato</a></button>
+                    <button>
+                        <a
+                            href="https://wa.me/5511995700067?text=Gostaria%20de%20mais%20informações">Contato</a>
+                        </button>
                 </div>
             </div>
         </header>
@@ -177,20 +183,19 @@
                     <div class="footer__container">
                         <div class="footer__column__left">
                             <ul class="footer__links">
-                                <li class="link"><a href="#">Inicio</a> </li>
-                                <li class="link"><a href="#">Sobre</a></li>
-                                <li class="link"><a href="#">Serviços</a></li>
-                                <li class="link"><a href="#">Fotos</a></li>
+                                <li class="link"><a href="index.html">Inicio</a> </li>
+                                <li class="link"><a href="sobre.html">Sobre</a></li>
+                                <li class="link"><a href="servicos.html">Serviços</a></li>
+                                <li class="link"><a href="fotos.html">Fotos</a></li>
                             </ul>
     
                             <div class="location">
                                 <h4>Localização</h4>
                                 <a
-                                    href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
-                                    <p>Rua Oiti, 319 - Vila Rejente Feijó</p>
-                                    <p>São Paulo/SP - CEP 03347-000</p>
-                                    <p>Próximo ao Shopping Anália Franco</p>
-                                </a>
+                            href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
+                            <p>Rua Coremu 175, Vila Esperança - São Paulo</p>
+                            <p>São Paulo/SP - CEP 03647-030</p>
+                        </a>
                             </div>
                         </div>
     
