--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             Nobres</title>
 
         <!-- ESTILOS  -->
+        <link rel="icon" type="image/x-icon" href="/imagens/icon-10.svg">
         <link rel="canonical" href="https://www.recantodosnobrespenha.com.br">
         <link href="/styles/reset.css" rel="stylesheet">
         <link href="/styles/general.css" rel="stylesheet">
@@ -52,7 +53,8 @@
         <!--  HEADER SECTION -->
         <header>
             <div class="top-bar">
-                <span>(11) 2681-7168 | (11) 99570-0067 -- Segunda a Sábado das 8:00
+                <span>(11) 2681-7168 | (11) 99570-0067 -- Segunda a Sábado das
+                    8:00
                     - 18.00 -- Rua Coremu 175, Vila Esperança - São Paulo</span>
             </div>
             <nav class="nav-bar">
@@ -61,7 +63,6 @@
                             alt="Logotipo recanto dos nobres"></a>
                 </div>
 
-  
                 <div class="nav-list">
                     <ul>
                         <li class="nav-item"><a href="index.html"
@@ -76,7 +77,10 @@
                     </ul>
                 </div>
                 <div class="login-button">
-                    <button><a href="#">Contato</a></button>
+                    <button>
+                        <a
+                            href="https://wa.me/5511995700067?text=Gostaria%20de%20mais%20informações">Contato</a>
+                    </button>
                 </div>
 
                 <div class="mobile-menu-icon">
@@ -96,7 +100,10 @@
                 </ul>
 
                 <div class="login-button">
-                    <button><a href="#">Contato</a></button>
+                    <button>
+                        <a
+                            href="https://wa.me/5511995700067?text=Gostaria%20de%20mais%20informações">Contato</a>
+                    </button>
                 </div>
             </div>
         </header>
@@ -242,7 +249,9 @@
                 nossa localização no Google Maps e traçar o melhor caminho
                 até nós.</p>
 
-            <button class="cta-button white-button">Ver no Google Maps</button>
+            <button class="cta-button white-button"><a
+                    href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
+                Ver no Google Maps</a></button>
         </section>
 
         <!--  FOOTER SECTION -->
@@ -250,19 +259,18 @@
             <div class="footer__container">
                 <div class="footer__column__left">
                     <ul class="footer__links">
-                        <li class="link"><a href="#">Inicio</a> </li>
-                        <li class="link"><a href="#">Sobre</a></li>
-                        <li class="link"><a href="#">Serviços</a></li>
-                        <li class="link"><a href="#">Fotos</a></li>
+                        <li class="link"><a href="index.html">Inicio</a> </li>
+                        <li class="link"><a href="sobre.html">Sobre</a></li>
+                        <li class="link"><a href="servicos.html">Serviços</a></li>
+                        <li class="link"><a href="fotos.html">Fotos</a></li>
                     </ul>
 
                     <div class="location">
                         <h4>Localização</h4>
                         <a
                             href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
-                            <p>Rua Oiti, 319 - Vila Rejente Feijó</p>
-                            <p>São Paulo/SP - CEP 03347-000</p>
-                            <p>Próximo ao Shopping Anália Franco</p>
+                            <p>Rua Coremu 175, Vila Esperança - São Paulo</p>
+                            <p>São Paulo/SP - CEP 03647-030</p>
                         </a>
                     </div>
                 </div>
