--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta property="og:locale" content="pt_BR" />
+
+        <!-- Google Tag Manager -->
+
+        <!-- End Google Tag Manager -->
         <!-- META TAGS -->
 
         <meta name="description"
@@ -77,7 +81,7 @@
                     </ul>
                 </div>
                 <div class="login-button">
-                    <button>
+                    <button class="contato">
                         <a
                             href="https://wa.me/5511995700067?text=Gostaria%20de%20mais%20informações">Contato</a>
                     </button>
@@ -152,12 +156,12 @@
                         cada morador se sinta como parte desta família. </p><br>
                     <p class="about-paragraph paragraph">
 
-                        Além de possuir um espaço bem Serviçosdo que
+                        Além de possuir um espaço bem Serviços do que
                         proporciona a cada morador conforto, segurança, saúde e
                         bem estar, conta
                         com profissionais de diversas especialidades tais como:
-                        Médico,Enfermeiro, Farmacêutico,Técnicas de Enfermagem,
-                        Nutricionista, Fisioterapeuta, Psicóloga e Cuidadores
+                        Médico,Enfermeiro, Técnicas de Enfermagem,
+                        Nutricionista, Fisioterapeuta e Cuidadores
                         Treinados.
                         Hoje a Casa de Repouso Residencial Recanto dos Nobres
                         conta
@@ -247,7 +251,7 @@
 
             <button class="cta-button white-button"><a
                     href="https://goo.gl/maps/D6SQHTbuubDb1Rk39">
-                Ver no Google Maps</a></button>
+                    Ver no Google Maps</a></button>
         </section>
 
         <!--  FOOTER SECTION -->
@@ -290,6 +294,18 @@
             </div>
 
         </footer>
+        <!-- Google Tag Manager -->
+        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+            new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+            'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+            })(window,document,'script','dataLayer','GTM-5WNDQGKV');</script>
+
+        <!-- Google Tag Manager (noscript) -->
+        <noscript><iframe
+                src="https://www.googletagmanager.com/ns.html?id=GTM-5WNDQGKV"
+                height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+        <!-- End Google Tag Manager (noscript) -->
 
         <script
             src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
